# pixel-invaders

./: .gitignore  CMakeLists.txt  TODO  audio.c  audio.h  boss.c  boss.h  bullets.c  bullets.h  collisions.c  collisions.h  constants.c  constants.h  enemies.c  enemies.h  entity.c  entity.h  fonts.c  fonts.h  game.c  game.h  level_manager.c  level_manager.h  main.c  options.c  options.h  particles.c  particles.h  pickups.c  pickups.h  player.c  player.h  readme.md  resources.rc  scene_manager.c  scene_manager.h  spacewars  sprites.c  sprites.h  stats.c  (+11 more)
.github/workflows/: build.yml  release.yml
assets/: icon.icns
assets/sounds/: hit.aiff
cmake/: FindSDL2_All.cmake  SetupSDL2.cmake
scripts/: package_assets.sh
unused assets/: README.md
